--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "6.5.7",
-    "astro": "5.13.2"
+    "@astrojs/netlify": "6.5.6",
+    "astro": "^5.13.1"
   }
 }
