--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "6.3.0",
-    "astro": "5.7.4"
+    "@astrojs/netlify": "^6.5.10",
+    "astro": "^5.13.6"
   }
 }
